--- a/coffee_project/src/main/resources/templates/index.html
+++ b/coffee_project/src/main/resources/templates/index.html
@@ -3,22 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <style th:insert="/layout::style"></style>
+    <style th:replace="/layout::style"></style>
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" th:href="@{/bootstrap-5.0.2-dist/css/bootstrap.css}"
           href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
 </head>
 <body>
-<div th:replace="layout::nav"></div>
 <div class="container-fluid">
     <div class="row">
-        <div th:replace="layout::content1"></div>
-        <div class="col-sm-10" style="background-color: #FEFAE0;min-height: 700px">
-
-            <h1>ừefwefew</h1>
+        <div th:replace="layout::side-bar">
+        </div>
+        <div class="col-10  col-sm-9 col-md-9 col-lg-10">
+            <div th:replace="layout::nav-bar">
+            </div>
+            <div class="row min-vh-100 content">
+                <div class="col-12">
+                    Thả code vào đây
+                </div>
+            </div>
+            <div th:replace="layout::footer">
+            </div>
         </div>
     </div>
 </div>
-<div th:replace="layout::footer"></div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <script th:src="@{/bootstrap-5.0.2-dist/js/bootstrap.bundle.js}"
         src="../static/bootstrap-5.0.2-dist/js/bootstrap.bundle.js"></script>
 </body>
