--- a/coffee_project/src/main/resources/templates/layout.html
+++ b/coffee_project/src/main/resources/templates/layout.html
@@ -37,7 +37,8 @@
         <div class="col-2 col-sm-3 col-md-3 col-lg-2 px-sm-2 px-0 bg-dark" th:fragment="side-bar">
             <div class="d-flex flex-column align-items-center align-items-sm-start px-0 pt-2 text-white min-vh-100">
                 <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                    <img class="fs-5 d-none d-sm-inline w-100 h-100" src="healthy_drink-1_4x.png"/>
+                    <img class="fs-5 d-none d-sm-inline w-100 h-100" src="/static/healthy_drink-1_4x.png"
+                         th:src="@{/healthy_drink-1_4x.png}"/>
                 </a>
                 <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start "
                     id="menu">
