--- a/coffee_project/src/main/resources/templates/user/create.html
+++ b/coffee_project/src/main/resources/templates/user/create.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Đăng kí thông tin nhân viên</title>
+    <title>Đăng ký thông tin nhân viên</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <style th:insert="/layout::style"></style>
@@ -66,7 +66,7 @@
             <!---------------BODY---------------------------------------------------------------------------------------->
             <div class="row" style="margin-top: 15px;margin-bottom: 20px">
 
-                <h1 class="col-10" style="text-align: center">Đăng Kí Thông Tin Nhân Viên</h1>
+                <h1 class="col-10" style="text-align: center">Chỉnh Sửa Thông Tin Nhân Viên</h1>
 
 
             </div>
@@ -252,7 +252,7 @@
         fileReader.readAsDataURL(file)
         fileReader.onload = function () {
             const url = fileReader.result;
-            // resultElement.innerHTML = `<img src="${url}" alt="${file.name}" class="preview-img" />`;
+
             document.getElementById("img").src = url;
             document.getElementById("img").alt = file.name;
             pushImage(file)
