[COFFEE][USER][NHAT]update userDto and create.html

--- a/coffee_project/src/main/resources/templates/user/create.html
+++ b/coffee_project/src/main/resources/templates/user/create.html
@@ -185,7 +185,7 @@
                                     <td colspan="2">
                                         <button style="margin-top:20px; width: 100%" id="submit"
                                                 class="btn btn-primary">
-                                            Đăng kí
+                                            Sửa
                                         </button>
                                     </td>
 
