--- a/coffee_project/src/main/resources/templates/oder/payment.html
+++ b/coffee_project/src/main/resources/templates/oder/payment.html
@@ -3,147 +3,164 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <style th:insert="/layout::style"></style>
+    <style th:replace="/layout::style"></style>
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" th:href="@{/bootstrap-5.0.2-dist/css/bootstrap.css}"
-          href="../../static/bootstrap-5.0.2-dist/css/bootstrap.css">
+          href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
 </head>
 <body>
-<div th:replace="layout::nav"></div>
 <div class="container-fluid">
     <div class="row">
-        <div th:replace="layout::content1"></div>
-        <div class="col-sm-10" style="background-color: #FEFAE0;min-height: 700px">
+        <div th:replace="layout::side-bar">
+        </div>
+        <div class="col-10  col-sm-9 col-md-9 col-lg-10">
+            <div th:replace="layout::nav-bar">
+            </div>
+            <div class="row min-vh-100 content">
+                <div class="col-12">
 
-            <div class="card">
-                <div class="card-body mx-4">
-                    <div class="container">
-                        <p class="my-5 mx-5" style="font-size: 30px;">Hóa đơn</p>
-                        <div class="row">
-                            <ul class="list-unstyled">
-                                <li class="text-black" th:text="${order.user.userName}"></li>
-                                <li class="text-muted mt-1"><span class="text-black"
-                                                                  th:text="${order.user.employeeType.employeeTypeName}"></span>
-                                </li>
-                                <li class="text-black mt-1"
-                                    th:text="${#calendars.format(#calendars.createNow(), 'dd MMM yyyy HH:mm')}">April 17
-                                    2021
-                                </li>
-                            </ul>
-                            <hr>
-                            <div class="row">
-                                <div class="col-xl-2">
-                                    <p>STT</p>
-                                </div>
-                                <div class="col-xl-4">
-                                    <p>Tên sản phẩm</p>
-                                </div>
-                                <div class="col-xl-2">
-                                    <p>Giá</p>
-                                </div>
-                                <div class="col-xl-2">
-                                    <p>Số lượng
-                                    </p>
-                                </div>
-                                <div class="col-xl-2">
-                                    <p class="float-end">Tổng giá
-                                    </p>
-                                </div>
-                                <hr>
-                            </div>
-                            <div class="row" th:each="orderDetail,stat:${order.orderDetailSet}">
-                                <div class="col-xl-2">
-                                    <p th:text="${stat.count}">STT</p>
-                                </div>
-                                <div class="col-xl-4">
-                                    <p th:text="${orderDetail.product.productName}">Tên sản phẩm</p>
-                                </div>
-                                <div class="col-xl-2">
-                                    <p th:text="${#numbers.formatDecimal(orderDetail.productPrice, 0, 'COMMA', 0, 'POINT')} + ' VND'">
-                                        Giá</p>
-                                </div>
-                                <div class="col-xl-2">
-                                    <p th:text="${orderDetail.quantityProduct}">Số lượng
-                                    </p>
-                                </div>
-                                <div class="col-xl-2">
-                                    <p class="float-end"
-                                       th:text="${#numbers.formatDecimal(orderDetail.productPrice*orderDetail.quantityProduct, 0, 'COMMA', 0, 'POINT')} + ' VND'">
-                                        Tổng giá
-                                    </p>
-                                </div>
-                                <hr>
-                            </div>
-
-                        </div>
-                        <div class="row text-black">
-
-                            <div class="col-xl-12">
-                                <p class="float-end fw-bold mx-1 " id="totalPrice"
-                                   th:text="${#numbers.formatDecimal(order.getTotalPrice(), 0, 'COMMA', 0, 'POINT')} + ' VND'">
-                                    Total: $100000
-                                </p>
-                            </div>
-                            <hr style="border: 2px solid black;">
-                        </div>
-                        <div class="row">
-                            <div class="col-xl-6">
-                                <p class="float-start"><span class="text-danger">*</span>Hóa đơn trên 100.000 VND thì
-                                    được cộng 10 điểm</p>
-                                <p class="float-start"><span class="text-danger">*</span>Hóa đơn trên 200.000 VND thì
-                                    được cộng 30 điểm</p>
-                                <p class="float-start"><span class="text-danger">*</span>Hóa đơn trên 500.000 VND thì
-                                    được cộng 100 điểm</p>
-                            </div>
-                            <div class="col-xl-6">
+                    <div class="card">
+                        <div class="card-body mx-4">
+                            <div class="container">
+                                <p class="my-5 mx-5" style="font-size: 30px;">Hóa đơn</p>
                                 <div class="row">
-                                    <p class="float-end align-content-end col-xl-12">Giảm giá: <span
-                                            id="sale">-0 VND</span>
-                                    </p>
-                                    <p class="float-end col-xl-12">Tiền thực trả: <span id="net"></span></p>
-                                    <span class="float-end col-xl-12 text-danger" id="error"></span>
+                                    <ul class="list-unstyled">
+                                        <li class="text-black" th:text="${order.user.userName}"></li>
+                                        <li class="text-muted mt-1"><span class="text-black"
+                                                                          th:text="${order.user.employeeType.employeeTypeName}"></span>
+                                        </li>
+                                        <li class="text-black mt-1"
+                                            th:text="${#calendars.format(#calendars.createNow(), 'dd MMM yyyy HH:mm')}">
+                                            April 17
+                                            2021
+                                        </li>
+                                    </ul>
+                                    <hr>
+                                    <div class="row">
+                                        <div class="col-xl-2">
+                                            <p>STT</p>
+                                        </div>
+                                        <div class="col-xl-4">
+                                            <p>Tên sản phẩm</p>
+                                        </div>
+                                        <div class="col-xl-2">
+                                            <p>Giá</p>
+                                        </div>
+                                        <div class="col-xl-2">
+                                            <p>Số lượng
+                                            </p>
+                                        </div>
+                                        <div class="col-xl-2">
+                                            <p class="float-end">Tổng giá
+                                            </p>
+                                        </div>
+                                        <hr>
+                                    </div>
+                                    <div class="row" th:each="orderDetail,stat:${order.orderDetailSet}">
+                                        <div class="col-xl-2">
+                                            <p th:text="${stat.count}">STT</p>
+                                        </div>
+                                        <div class="col-xl-4">
+                                            <p th:text="${orderDetail.product.productName}">Tên sản phẩm</p>
+                                        </div>
+                                        <div class="col-xl-2">
+                                            <p th:text="${#numbers.formatDecimal(orderDetail.productPrice, 0, 'COMMA', 0, 'POINT')} + ' VND'">
+                                                Giá</p>
+                                        </div>
+                                        <div class="col-xl-2">
+                                            <p th:text="${orderDetail.quantityProduct}">Số lượng
+                                            </p>
+                                        </div>
+                                        <div class="col-xl-2">
+                                            <p class="float-end"
+                                               th:text="${#numbers.formatDecimal(orderDetail.productPrice*orderDetail.quantityProduct, 0, 'COMMA', 0, 'POINT')} + ' VND'">
+                                                Tổng giá
+                                            </p>
+                                        </div>
+                                        <hr>
+                                    </div>
+
                                 </div>
+                                <div class="row text-black">
+
+                                    <div class="col-xl-12">
+                                        <p class="float-end fw-bold mx-1 " id="totalPrice"
+                                           th:text="${#numbers.formatDecimal(order.getTotalPrice(), 0, 'COMMA', 0, 'POINT')} + ' VND'">
+                                            Total: $100000
+                                        </p>
+                                    </div>
+                                    <hr style="border: 2px solid black;">
+                                </div>
+                                <div class="row">
+                                    <div class="col-xl-6">
+                                        <p class="float-start"><span class="text-danger">*</span>Hóa đơn trên 100.000
+                                            VND thì
+                                            được cộng 10 điểm</p>
+                                        <p class="float-start"><span class="text-danger">*</span>Hóa đơn trên 200.000
+                                            VND thì
+                                            được cộng 30 điểm</p>
+                                        <p class="float-start"><span class="text-danger">*</span>Hóa đơn trên 500.000
+                                            VND thì
+                                            được cộng 100 điểm</p>
+                                    </div>
+                                    <div class="col-xl-6">
+                                        <div class="row">
+                                            <p class="float-end align-content-end col-xl-12">Giảm giá: <span
+                                                    id="sale">-0 VND</span>
+                                            </p>
+                                            <p class="float-end col-xl-12">Tiền thực trả: <span id="net"></span></p>
+                                            <span class="float-end col-xl-12 text-danger" id="error"></span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <form action="/order/confirm-payment" class="row" method="post"
+                                      style="margin-top: 50px;">
+                                    <div class="col-md-6">
+                                        <label for="input-phone-number" class="form-label">Số điện thoại</label>
+                                        <span class="form-label float-end text-info" id="result"></span>
+                                        <div th:each="customer:${listCustomer}" class="customer">
+                                            <input type="text" hidden="hidden"
+                                                   th:value="${customer.customerPhoneNumber}"
+                                                   class="phoneNumber">
+                                            <input type="text" hidden="hidden" th:value="${customer.customerName}"
+                                                   class="name">
+                                            <input type="text" hidden="hidden" th:value="${customer.customerPoint}"
+                                                   class="point">
+                                        </div>
+                                        <input type="text" class="form-control input" name="phoneNumber"
+                                               id="input-phone-number">
+                                    </div>
+                                    <div class="col-md-4">
+                                        <label class="form-label">Dùng điểm thưởng</label>
+                                        <select class="form-select" name="sale" id="select"
+                                                aria-label="Default select example">
+                                            <option selected value="0">Không dùng điểm thưởng</option>
+                                            <option value="30">10% Với 30 điểm thưởng</option>
+                                            <option value="50">20% Với 50 điểm thưởng</option>
+                                            <option value="100">50% Với 100 điểm thưởng</option>
+                                        </select>
+                                    </div>
+                                    <div class="col-md-2 py-4">
+                                        <button type="submit" class="btn btn-primary float-end">
+                                            <i class="fa-solid fa-cash-register"></i>
+                                        </button>
+                                    </div>
+                                </form>
                             </div>
                         </div>
-                        <form action="/order/confirm-payment" class="row" method="post"
-                              style="margin-top: 50px;">
-                            <div class="col-md-6">
-                                <label for="input-phone-number" class="form-label">Số điện thoại</label>
-                                <span class="form-label float-end text-info" id="result"></span>
-                                <div th:each="customer:${listCustomer}" class="customer">
-                                    <input type="text" hidden="hidden" th:value="${customer.customerPhoneNumber}"
-                                           class="phoneNumber">
-                                    <input type="text" hidden="hidden" th:value="${customer.customerName}"
-                                           class="name">
-                                    <input type="text" hidden="hidden" th:value="${customer.customerPoint}"
-                                           class="point">
-                                </div>
-                                <input type="text" class="form-control input" name="phoneNumber"
-                                       id="input-phone-number">
-                            </div>
-                            <div class="col-md-4">
-                                <label class="form-label">Dùng điểm thưởng</label>
-                                <select class="form-select" name="sale" id="select" aria-label="Default select example">
-                                    <option selected value="0">Không dùng điểm thưởng</option>
-                                    <option value="30">10% Với 30 điểm thưởng</option>
-                                    <option value="50">20% Với 50 điểm thưởng</option>
-                                    <option value="100">50% Với 100 điểm thưởng</option>
-                                </select>
-                            </div>
-                            <div class="col-md-2 py-4">
-                                <button type="submit" class="btn btn-primary float-end">
-                                    <i class="fa-solid fa-cash-register"></i>
-                                </button>
-                            </div>
-                        </form>
                     </div>
+
+
                 </div>
+            </div>
+            <div th:replace="layout::footer">
             </div>
         </div>
     </div>
 </div>
-<div th:replace="layout::footer"></div>
+
 <script>
     let totalPrice = parseInt($('#totalPrice').text().replace(/[^0-9]/gi, ''));
     $(document).ready(function () {
@@ -207,6 +224,6 @@
     });
 </script>
 <script th:src="@{/bootstrap-5.0.2-dist/js/bootstrap.bundle.js}"
-        src="../../static/bootstrap-5.0.2-dist/js/bootstrap.bundle.js"></script>
+        src="../static/bootstrap-5.0.2-dist/js/bootstrap.bundle.js"></script>
 </body>
 </html>
