[QUYEN][CUSTOMER][COFFEE] fix review

--- a/coffee_project/src/main/resources/templates/customer/create.html
+++ b/coffee_project/src/main/resources/templates/customer/create.html
@@ -8,10 +8,9 @@
           href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <style>
-        body {
-            font-family: "Source Code Pro";
-        }
-
+        /*body {*/
+        /*    font-family: "Source Code Pro";*/
+        /*}*/
         .form {
             width: 70%;
             position: relative;
@@ -69,11 +68,10 @@
                                 <tr>
                                     <td></td>
                                     <td>
+                                        <button type="submit" class="btn btn-primary"> Thêm mới </button>
                                         <a th:href="@{/customer/list}" style="text-decoration: none">
-                                            <button type="button" class="btn btn-secondary">Thoát
-                                            </button>
+                                            <button type="button" class="btn btn-secondary"> Thoát </button>
                                         </a>
-                                        <button type="submit" class="btn btn-primary">Thêm mới</button>
                                     </td>
                                 </tr>
                             </table>
