--- a/coffee_project/src/main/resources/templates/customer/edit.html
+++ b/coffee_project/src/main/resources/templates/customer/edit.html
@@ -70,18 +70,17 @@
                                                th:errors="*{customerPhoneNumber}" style="color: red"></small>
                                     </td>
                                 </tr>
-                                <tr>
-                                    <th>Điểm <span style="color: red">*</span></th>
-                                    <td><input class="form-control" th:field="*{customerPoint}" readonly></td>
-                                </tr>
+<!--                                <tr>-->
+<!--                                    <th>Điểm <span style="color: red">*</span></th>-->
+<!--                                    <td><input class="form-control" th:field="*{customerPoint}" readonly></td>-->
+<!--                                </tr>-->
                                 <tr>
                                     <td></td>
                                     <td>
-                                        <a th:href="@{/customer/list}" style="text-decoration: none">
-                                            <button type="button" class="btn btn-secondary">Thoát
-                                            </button>
-                                        </a>
                                         <button type="submit" class="btn btn-primary">Chỉnh sửa</button>
+                                        <a th:href="@{/customer/list}" style="text-decoration: none">
+                                            <button type="button" class="btn btn-secondary">Thoát</button>
+                                        </a>
                                     </td>
                                 </tr>
                             </table>
