--- a/coffee_project/src/main/resources/templates/customer/list.html
+++ b/coffee_project/src/main/resources/templates/customer/list.html
@@ -102,9 +102,7 @@
                         <th scope="col">Ngày sinh</th>
                         <th scope="col">Số điện thoại</th>
                         <th scope="col">Điểm</th>
-                        <th scope="col">Chi tiết</th>
-                        <th scope="col">Sửa</th>
-                        <th scope="col">Xóa</th>
+                        <th scope="col" colspan="3">Chức năng</th>
                     </tr>
                     </thead>
                     <tbody>
